chore: use ktlint gradle plugin